# graphml

./: .gitignore  .pdm-python  404.html  README.md  Taskfile.yml  environment.yml  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt
.task/checksum/: adjacency  db-prep  edges  embed  nodes
docs/: graph-embeds.md  graph-text.md  setup.md
graph-embeds/: index.html
graph-text/: index.html
graphml/: __init__.py  baseline.py  data.py  model.py  nodes.py  preprocess.py  similarity.py  train.py
graphml/flows/: embed_cites.py  make_adjacency.py  make_edges.py  make_embeds.py  make_nodes.py
graphml/lightning_logs/gnn_model/checkpoints/: epoch=499-step=500.ckpt
graphml/lightning_logs/mlp_baseline/: hparams.yaml  metrics.csv
graphml/lightning_logs/mlp_baseline/checkpoints/: epoch=499-step=500.ckpt
graphml/lightning_logs/version_19/: hparams.yaml  metrics.csv
notebooks/: basic_explore.ipynb  neighbors.ipynb  node2vec_viz.ipynb
search/: search_index.json
setup/: index.html
